# sseParser

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  REQUIREMENTS_TRACEABILITY.md  vcpkg.json
.github/workflows/: multi-compiler.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TESTING.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-project-structure-SUMMARY.md  01-01-project-structure.md  01-02-SUMMARY.md  01-02-error-codes.md  01-03-SUMMARY.md  01-03-message.md  01-04-SUMMARY.md  01-04-buffer.md  01-05-SUMMARY.md  01-05-main-header.md  01-06-SUMMARY.md  01-06-test-error-codes.md  01-07-SUMMARY.md  01-07-test-message.md  01-08-SUMMARY.md  01-08-test-buffer.md  01-09-SUMMARY.md  01-09-test-integration.md  01-10-SUMMARY.md  01-10-build-system.md  01-CONTEXT.md  01-PLAN.md  01-VERIFICATION.md
.planning/phases/02-core-parsing/: 02-01-SUMMARY.md  02-01-field-parser.md  02-02-SUMMARY.md  02-02-line-endings.md  02-03-SUMMARY.md  02-03-comments-retry.md  02-04-SUMMARY.md  02-04-integration.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-message-assembly/: 03-01-SUMMARY.md  03-01-message-builder.md  03-02-SUMMARY.md  03-02-last-event-id.md  03-03-SUMMARY.md  03-03-integration.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-public-api/: 04-01-SUMMARY.md  04-01-sse-parser-class.md  04-02-SUMMARY.md  04-02-string-view-flush.md  04-03-SUMMARY.md  04-03-reset-callbacks.md  04-04-SUMMARY.md  04-04-integration.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-polish/: 05-01-SUMMARY.md  05-01-integration-edge.md  05-02-SUMMARY.md  05-02-fuzzing-performance.md  05-03-SUMMARY.md  05-03-documentation.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmake/: CompilerOptions.cmake  VcpkgDeps.cmake
docs/: Doxyfile  vcpkg-dependency-issues.md
examples/: usage_examples.cpp
include/sse_parser/: buffer.h  error_codes.h  field_parser.h  message.h  message_builder.h  sse_parser.h  sse_parser.hpp  sse_parser_facade.h
scripts/: build.bat  build.sh  config.bat  detect_libs.bat
src/: CMakeLists.txt  field_parser.cpp  main.cpp
tests/: CMakeLists.txt  main_test.cpp  test_buffer.cpp  test_edge_cases.cpp  test_error_codes.cpp  test_field_parser.cpp  test_fuzzing.cpp  test_integration.cpp  test_integration_p1.cpp  test_integration_p2.cpp  test_integration_p3.cpp  test_line_endings.cpp  test_message.cpp  test_performance.cpp  test_sse_parser.cpp  verify_api_export.cpp
tests/data/: edge_cases.sse  mixed_format.sse  small_messages.sse
(+10 files in other folders)
